--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -548,7 +548,7 @@ a {
     font-size: 20px;
   }
 
-  .products {
+  /*.products {
     flex-wrap: wrap;
     margin-top: 0;
 
@@ -561,6 +561,44 @@ a {
 
       &:nth-child(4) {
         display: flex;
+      }
+    }
+  }*/
+
+  .products {
+    display: grid;
+    grid-template-columns: 1fr;
+
+    .product {
+      margin-top: 30px;
+
+      &:nth-child(3) {
+        display: flex;
+      }
+
+      &:nth-child(4) {
+        display: flex;
+      }
+    }
+  }
+
+  .but-container {
+    @include flex_row();
+    justify-content: center;
+
+    .but-showMore {
+      margin: 50px auto 0 auto;
+      border: none;
+      background-color: $col_black;
+      color: $col_white;
+      border-radius: 4px;
+      text-align: center;
+      padding: 15px 30px;
+      cursor: pointer;
+      transition: $trans;
+
+      &:hover {
+        background-color: $col_primarydark;
       }
     }
   }
@@ -576,6 +614,7 @@ a {
   border-bottom: 1px solid $col_lightgrey;
 
   .filter-options {
+    display: flex;
 
     .filter-option {
       margin-left: 30px;
@@ -655,9 +694,15 @@ $sizes: ("sm":575.98px, "md":767.98px, "lg":991.98px, "xl":1199.98px);
       margin-top: 50px;
     }
   }
+
+  .catalog {
+    .products {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
 }
 
-@include md("max", 460px) {
+@include md("max", 480px) {
   .banners_container {
     .banners {
       .banner {
@@ -685,6 +730,24 @@ $sizes: ("sm":575.98px, "md":767.98px, "lg":991.98px, "xl":1199.98px);
       }
     }
   }
+
+  .catalog {
+    .products {
+      grid-template-columns: 1fr;
+    }
+  }
+}
+
+@include md("max", 420px) {
+  .filter {
+    .filter-options {
+      flex-direction: column;
+
+      .filter-option {
+        margin: 7px 0 0 0 ;
+      }
+    }
+  }
 }
 
 @include md("min", 510px) {
@@ -701,6 +764,12 @@ $sizes: ("sm":575.98px, "md":767.98px, "lg":991.98px, "xl":1199.98px);
     .product-info {
       width: $size;
       margin-top: 50px;
+    }
+  }
+
+  .catalog {
+    .products {
+      grid-template-columns: 1fr 1fr;
     }
   }
 }
@@ -733,6 +802,7 @@ $sizes: ("sm":575.98px, "md":767.98px, "lg":991.98px, "xl":1199.98px);
       }
     }
   }
+
 }
 
 @include media("min", "md") {
@@ -772,6 +842,12 @@ $sizes: ("sm":575.98px, "md":767.98px, "lg":991.98px, "xl":1199.98px);
     .product-info {
       width: $size;
       margin-top: 0;
+    }
+  }
+
+  .catalog {
+    .products {
+      grid-template-columns: 1fr 1fr 1fr;
     }
   }
 }
@@ -832,6 +908,12 @@ $sizes: ("sm":575.98px, "md":767.98px, "lg":991.98px, "xl":1199.98px);
 
     .product-info {
       width: $size;
+    }
+  }
+
+  .catalog {
+    .products {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
   }
 }
