--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -618,7 +618,7 @@ a {
 }
 
 /*Search*/
-.search-container {
+.column-container {
   position: absolute;
   z-index: 2;
   background-color: #f2f2f2c2;
@@ -627,7 +627,7 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  animation: anim 1.5s forwards;
+  animation: anim 1s forwards;
   @include flex_row();
   justify-content: flex-end;
 
@@ -635,40 +635,69 @@ a {
     height: 100%;
     background-color: $col_white;
     right: 0;
-    padding: 10px 20px;
+    padding: 20px 30px;
     max-width: 250px;
     color: $col_black;
     width: 350px;
 
     .search-header {
-      margin-top: 10px;
+      @include flex_row();
+      align-items: center;
+      justify-content: space-between;
+      padding-bottom: 15px;
+      border-bottom: 1px solid $col_lightgrey;
 
-      input {
-        outline: none;
-        border: none;
-        border-bottom: 1px solid $col_unactive;
-        width: 100%;
-        background: none;
-        padding: 5px 0;
+      .search-title {
+        font-size: 20px;
       }
+
+      .search-cancel {
+        @include simple_size(15px);
+      }
+    }
+
+    .search-input {
+      margin-top: 20px;
+      outline: none;
+      border: none;
+      border-bottom: 1px solid $col_lightgrey;
+      width: 100%;
+      background: none;
+      padding: 5px 0;
     }
 
     .search-results {
       overflow-y: auto;
-      margin-top: 10px;
-      max-height: 600px;
+      margin-top: 15px;
+      max-height: 78%;
+
+      &::-webkit-scrollbar {
+        width: 5px;     /* width of the entire scrollbar */
+      }
+
+      &::-webkit-scrollbar-track {
+        background: none;        /* color of the tracking area */
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: $col_darkgrey;    /* color of the scroll thumb */
+        border-radius: 20px;       /* roundness of the scroll thumb */
+      }
 
       .search-result {
         @include flex_row();
         align-items: center;
-        margin-top: 10px;
+        margin-top: 15px;
         cursor: pointer;
-        border-bottom: 1px solid $col_unactive;
-        padding-bottom: 5px;
         animation: anim 2.5s forwards;
+        transition: .3s;
+
+        &:hover {
+          background-color: $col_lightgrey;
+        }
 
         .product-img {
-          @include simple_size(45px);
+          @include simple_size(70px);
           filter: none!important;
           -webkit-filter: none!important;
         }
